# ollama-agent

./: .gitignore  Dockerfile  INSTALLATION.md  LICENSE  README.md  docker-compose.yml  install.sh  publish_to_pypi.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
agent/: advanced_tools.py  agent.py  infinite_runner.py  intelligence_tools.py  main.py  memory.py  post_install.py  prompt_engine.py  safety.py  server_tools.py  setup.py  testing.py  tools.py  ui.py  web_tools.py
